--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,15 @@
 @import "tailwindcss";
+
+@keyframes slideIn {
+  from {
+    transform: translateX(100%);
+  }
+
+  to {
+    transform: translateX(0%);
+  }
+}
+
+.slide {
+  animation: slideIn 0.8s ease-in-out;
+}
